--- a/apps/content/mat-tweakers/index.html
+++ b/apps/content/mat-tweakers/index.html
@@ -17,9 +17,33 @@
             <div class="app-icon" style="background-image: url('./ICON.png');"></div>
             <div class="app-info">
                 <div class="app-title">MAT Tweakers</div>
-                <div class="app-publisher">by Admin.</div>
-                <div class="app-secure">✅ Securised by MAT</div>
             </div>
+            <table>
+                <tr>
+                    <td>
+                        <div class="app-version">Version 1.0.0</div>
+                    </td>
+                    <td>
+                        <div class="app-version">
+                            <a style="color:transparent">--</a>
+                            -
+                            <a style="color:transparent">--</a>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="app-publisher">by Admin.</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="app-rating"><!--★★★★☆ (4.0)--></div>
+                    </td>
+                    <td></td>
+                    <td>
+                    <div class="app-secure">✅ Securised by MAT</div>
+                    </td>
+                </tr>
+            </table>
             <button class="install-btn">Download</button>
             <div class="app-rating"><!--★★★★☆ (4.0)--></div>
         </div>
