Update MAT Tweakers

--- a/apps/content/mat-tweakers/index.html
+++ b/apps/content/mat-tweakers/index.html
@@ -49,7 +49,8 @@
         </div>
         <div class="main-content">
             <div class="screenshots">
-                No aviailable screenshots...
+                <img src="SC1.png" alt="Capture d'écran 1">
+                <img src="SC2.png" alt="Capture d'écran 2">
             </div>
             <div class="description">
                 <h2>Description</h2>
