--- a/apps/content/mat-tweakers/index.html
+++ b/apps/content/mat-tweakers/index.html
@@ -49,8 +49,8 @@
         </div>
         <div class="main-content">
             <div class="screenshots">
-                <img src="SC1.png" alt="Capture d'écran 1">
-                <img src="SC2.png" alt="Capture d'écran 2">
+                <img src="SC1.png" onclick="window.open('SC1.png')" alt="screenshot 1">
+                <img src="SC2.png" onclick="window.open('SC1.png')" alt="screenshot 2">
             </div>
             <div class="description">
                 <h2>Description</h2>
