--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -44,7 +44,7 @@
                     </tr>
                 </table>
             </div>
-            <button class="install-btn">Download</button><br>
+            <button class="install-btn">An other thing</button><a style="color: transparent">===</a><button class="install-btn">Download</button><br>
             </div>
         </div>
         <div class="main-content">
