--- a/apps/publisher/exemple/index.html
+++ b/apps/publisher/exemple/index.html
@@ -39,7 +39,7 @@
                         </td>
                         <td></td>
                         <td>
-                            <div class="app-secure" style="color:red;">em@il</div>
+                            <div class="app-publisher">em@il</div>
                         </td>
                     </tr>
                 </table>
@@ -53,7 +53,7 @@
                 <p>
                     USER DES
                 </p>
-            </div>
+            </div><br>
             <section class="app-grid">
                 <div class="app-card">
                     <div class="app-icon"></div>
