--- a/apps/publisher/exemple/index.html
+++ b/apps/publisher/exemple/index.html
@@ -53,16 +53,13 @@
                 <p>
                     USER DES
                 </p>
-            </div><br>
-            <section class="app-grid">
-                <div class="app-card">
-                    <div class="app-icon"></div>
-                    <div class="app-card" onclick="window.location.href = '/OneStaller/apps/content/mat-tweakers/' " >
-                        <img src="/OneStaller/apps/content/mat-tweakers/ICON.png"><br><H2>MAT Tweakers</H2>
-                        <p>Windows</p>
-                    </div>
-                </div>
-            </section>
+            </div>
+            <div class="description" style="gap:24px;">
+                <h2>Connexions</h2>
+                <p>
+                    Something.
+                </p>
+            </div>
         </div>
     </body>
 </html>
