--- a/apps/publisher/Admin/index.html
+++ b/apps/publisher/Admin/index.html
@@ -14,7 +14,7 @@
         <header id="Bar"></header>
         <script>includeHTML("Bar", "/OneStaller/Bar.htm");</script>
         <div class="header-app">
-            <div class="app-icon"  style="background-image: url();">🟦</div>
+            <div class="app-icon" style="background-image: url('https://avatars.githubusercontent.com/u/216023330');"></div>
             <div class="app-info">
                 <div class="app-title">Exemple User</div>
                 <table>
