--- a/apps/content/exemple/index.html
+++ b/apps/content/exemple/index.html
@@ -14,7 +14,7 @@
         <header id="Bar"></header>
         <script>includeHTML("Bar", "/OneStaller/Bar.htm");</script>
         <div class="header-app">
-            <div class="app-icon">🟦</div>
+            <div class="app-icon"  style="background-image: url();">🟦</div>
             <div class="app-info">
                 <div class="app-title">Exemple app</div>
                 <table>
