Create MS account

--- a/apps/publisher/Admin/index.html
+++ b/apps/publisher/Admin/index.html
@@ -16,11 +16,11 @@
         <div class="header-app">
             <div class="app-icon" style="background-image: url('https://avatars.githubusercontent.com/u/216023330');"></div>
             <div class="app-info">
-                <div class="app-title">Exemple User</div>
+                <div class="app-title">MAT Services</div>
                 <table>
                     <tr>
                         <td>
-                            <div class="app-version">Date of creation</div>
+                            <div class="app-version">Creator</div>
                         </td>
                         <td>
                             <div class="app-version">
@@ -30,34 +30,35 @@
                             </div>
                         </td>
                         <td>
-                            <div class="app-publisher">@mention</div>
+                            <div class="app-publisher">@mat.services</div>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <div class="app-rating">badges</div>
+                            <div class="app-rating">⚙️🛡️▶️✅</div>
                         </td>
                         <td></td>
                         <td>
-                            <div class="app-publisher">em@il</div>
+                            <div class="app-publisher">mat.concact@gmail.com</div>
                         </td>
                     </tr>
                 </table>
             </div>
-            <button class="install-btn" onclick="window.open('')">Contact</button><br>
+            <button class="install-btn" onclick="window.open('mailto:mat.concact@gmail.com')">Contact</button><br>
             </div>
         </div>
         <div class="main-content">
             <div class="description" style="gap:24px;">
                 <h2>Description</h2>
                 <p>
-                    USER DES
+                    MAT Services is the organization that have created OneStaller.
                 </p>
             </div>
             <div class="description" style="gap:24px;">
                 <h2>Connexions</h2>
                 <p>
-                    Something.
+                    <a Onclick="window.open('https://github.com/MAT-Services-ORG')">GitHub</a>
+                    <a onclick="window.open('https://www.youtube.com/@vide_et_o')">YouTube</a>
                 </p>
             </div>
         </div>
