--- a/apps/publisher/Admin/index.html
+++ b/apps/publisher/Admin/index.html
@@ -57,7 +57,7 @@
             <div class="description" style="gap:24px;">
                 <h2>Connexions</h2>
                 <p>
-                    <a Onclick="window.open('https://github.com/MAT-Services-ORG')">GitHub</a>
+                    <a Onclick="window.open('https://github.com/MAT-Services-ORG')">GitHub</a><br>
                     <a onclick="window.open('https://www.youtube.com/@vide_et_o')">YouTube</a>
                 </p>
             </div>
