--- a/apps/content/mat-tweakers/index.html
+++ b/apps/content/mat-tweakers/index.html
@@ -30,7 +30,7 @@
                             </div>
                         </td>
                         <td>
-                            <div class="app-publisher">by Admin.</div>
+                            <div class="app-publisher">by <a href="/OneStaller/apps/publisher/admin/">MAT Services</a></div>
                         </td>
                     </tr>
                     <tr>
