--- a/search/index.html
+++ b/search/index.html
@@ -5,14 +5,14 @@
         <title>OneStaller - Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style></style>
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="/OneStaller/styles.css">
         <link rel="icon" type="image/x-icon" href="/OneStaller/assets/logo.png"></link>
         <script src="/HttpReq.js"></script>
         <script async src="https://cse.google.com/cse.js?cx=1582c6852b03f46c4"></script> 
     </head>
     <body>
         <header id="Bar"></header>
-        <script>includeHTML("Bar", "/Bar.htm");</script>
+        <script>includeHTML("Bar", "/OneStaller/Bar.htm");</script>
         <main>
             <div class="gcse-search"></div>
         </main>
