--- a/Bar.htm
+++ b/Bar.htm
@@ -1,5 +1,5 @@
 <h1 class="bartxt"><img src="/OneStaller/assets/logo.png" >OneStaller</h1>
-<form class="search-bar">
+<form class="search-bar" method="get" action="/OneStaller/search/">
     <input type="text" placeholder="Search apps, games, or categories..." />
     <button type="submit">Search (UNAVIABLE)</button>
 </form>
