--- a/Bar.htm
+++ b/Bar.htm
@@ -1,6 +1,6 @@
 <h1 class="bartxt"><img src="/OneStaller/assets/logo.png" >OneStaller</h1>
 <form class="search-bar" method="get" action="/OneStaller/search/">
-    <input type="text" placeholder="Search apps, games, or categories..." />
+    <input type="search" placeholder="Search apps, games, or categories..." id="site-search" name="q" />
     <button type="submit">Search (UNAVIABLE)</button>
 </form>
 <nav>
