--- a/Bar.htm
+++ b/Bar.htm
@@ -1,7 +1,7 @@
 <h1 class="bartxt"><img src="/OneStaller/assets/logo.png" >OneStaller</h1>
 <form class="search-bar" method="get" action="/OneStaller/search/">
-    <input type="search" placeholder="Search apps, games, or categories..." id="site-search" name="q" />
-    <button type="submit">Search (UNAVIABLE)</button>
+    <input type="search" placeholder="Search apps, games, or categories..." id="site-search" name="gsc.q" />
+    <button type="submit">Search</button>
 </form>
 <nav>
     <a href="/OneStaller/">Home</a>
